--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ MANIFEST
 *.manifest
 *.spec
 
+# Poetry
+poetry.lock
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
@@ -157,4 +160,10 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+# Mac Home Brew
+Brewfile.lock.json
+
+# Misc
+tmp/
