chore: update  catalog for backstage

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -12,6 +12,10 @@ metadata:
     - monitoring
     - opensource
     - os
+  links:
+    - url: https://openo11y.dev
+      title: Open O11y Website
+      icon: web
 spec:
   type: docs
   lifecycle: experimental
