feat: update urls and remove some uneeded files

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -12,6 +12,7 @@ metadata:
     - monitoring
     - opensource
     - os
+    - platform
   links:
     - url: https://openo11y.dev
       title: Open O11y Website
