--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,4 +21,10 @@ nav:
     - 'Overview': './guidance.md'
     - 'Leading Delivery Metrics': './delivery-metrics.md'
     - 'Measuring Joy': './joy-metrics.md'
+    - 'Security Posture': './security.md'
+  - 'O11y Quick Start Platform':
+    - 'Overview': './platform/README.md'
+    - 'Architecture': './platform/architecture.md'
+    - 'Getting Started':
+      - 'AWS': './platform/aws.md'
   - 'Contributing': './contributing.md'
