--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,34 @@ site_name: 'Open O11y'
 theme:
   name: material
   custom_dir: docs/overrides
+  icon:
+    repo: fontawesome/brands/github
+    edit: material/pencil
+    view: material/eye
+  palette:
+    # Palette toggle for light mode
+    - scheme: default
+      primary: custom
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+    # Palette toggle for dark mode
+    - scheme: slate
+      primary: custom
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+
+  features:
+    - content.action.edit
+    - content.action.view
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.footer
+    - navigation.instant
+    - navigation.expand
+    - navigation.path
+    - navigation.top
 
 markdown_extensions:
   - pymdownx.superfences:
@@ -15,6 +43,8 @@ markdown_extensions:
 extra_css:
   - "styles/extra.css"
   - "styles/table.css"
+
+repo_url: https://github.com/liatrio/openo11y.dev
 
 nav:
   - 'Welcome to Open O11y': 'index.md'
