--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,4 +74,4 @@ nav:
   #     - "Architecture": "./platform/architecture.md"
   #     - "Recommended Implementations":
   #         - "AWS": "./platform/aws.md"
-  - "Contributing": "./CONTRIBUTING.md"
+  - "Contributing": "./contributing.md"
