feat: add delivery metrics demo page and update nav

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,15 +61,18 @@ repo_url: https://github.com/liatrio/openo11y.dev
 nav:
   - "Welcome to Open O11y": "index.md"
   - "Why Metrics Matter": "./why-metrics-matter.md"
-  - "Human Systems":
-      - "Observing Human Systems": "./human-systems/observing-human-systems.md"
-      - "Delivery Metrics":
-          - "Overview": "./human-systems/delivery-metrics/overview.md"
-          - "Lagging Inidicators": "./human-systems/delivery-metrics/lagging-delivery-indicators.md"
-          - "Leading Inidicators": "./human-systems/delivery-metrics/leading-delivery-indicators.md"
-          - "DevEx & Platform": "./human-systems/delivery-metrics/devex-platform.md"
-          - "Satisfaction & Well-Being": "./human-systems/delivery-metrics/satisfaction-well-being.md"
-  - "Business Systems": "./business-systems.md"
+  - "Guidance":
+    - "Human Systems":
+        - "Observing Human Systems": "./human-systems/observing-human-systems.md"
+        - "Delivery Metrics":
+            - "Overview": "./human-systems/delivery-metrics/overview.md"
+            - "Lagging Inidicators": "./human-systems/delivery-metrics/lagging-delivery-indicators.md"
+            - "Leading Inidicators": "./human-systems/delivery-metrics/leading-delivery-indicators.md"
+            - "DevEx & Platform": "./human-systems/delivery-metrics/devex-platform.md"
+            - "Satisfaction & Well-Being": "./human-systems/delivery-metrics/satisfaction-well-being.md"
+    - "Business Systems": "./business-systems.md"
+  - "Demos":
+    - "Delivery Metrics Demo": "./delivery-demo.md"
   # - "O11y Quick Start Platform":
   #     - "Overview": "./platform/README.md"
   #     - "Architecture": "./platform/architecture.md"
