--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,17 +64,17 @@ nav:
   - "Welcome to OpenO11y": "index.md"
   - "Why Metrics Matter": "./why-metrics-matter.md"
   - "Guidance":
-    - "Human Systems":
-        - "Observing Human Systems": "./human-systems/observing-human-systems.md"
-        - "Delivery Metrics":
-            - "Overview": "./human-systems/delivery-metrics/overview.md"
-            - "Lagging Inidicators": "./human-systems/delivery-metrics/lagging-delivery-indicators.md"
-            - "Leading Inidicators": "./human-systems/delivery-metrics/leading-delivery-indicators.md"
-            - "DevEx & Platform": "./human-systems/delivery-metrics/devex-platform.md"
-            - "Satisfaction & Well-Being": "./human-systems/delivery-metrics/satisfaction-well-being.md"
-    - "Business Systems": "./business-systems.md"
+      - "Human Systems":
+          - "Observing Human Systems": "./human-systems/observing-human-systems.md"
+          - "Software Delivery Metrics":
+              - "Overview": "./human-systems/delivery-metrics/overview.md"
+              - "Lagging Inidicators": "./human-systems/delivery-metrics/lagging-delivery-indicators.md"
+              - "Leading Inidicators": "./human-systems/delivery-metrics/leading-delivery-indicators.md"
+              - "DevEx & Platform": "./human-systems/delivery-metrics/devex-platform.md"
+          - "Satisfaction & Well-Being": "./human-systems/satisfaction-well-being.md"
+      - "Business Systems": "./business-systems.md"
   - "Demos":
-    - "Delivery Metrics Demo": "./delivery-demo.md"
+      - "Delivery Metrics Demo": "./delivery-demo.md"
   # - "O11y Quick Start Platform":
   #     - "Overview": "./platform/README.md"
   #     - "Architecture": "./platform/architecture.md"
