--- a/.github/workflows/publish-techdocs-to-s3.yaml
+++ b/.github/workflows/publish-techdocs-to-s3.yaml
@@ -90,7 +90,7 @@ jobs:
         run: sudo npm install -g @techdocs/cli
 
       - name: Install mkdocs and mkdocs plugins
-        run: python -m pip install mkdocs-techdocs-core==1.* neoteroi-mkdocs mkdocs-kroki-plugin
+        run: python -m pip install mkdocs-techdocs-core==1.* neoteroi-mkdocs mkdocs-kroki-plugin pymdown-extensions
 
       - name: Get namespace from catalog-info.yaml
         if: ${{ needs.check-for-catalog-info-at-root.outputs.catalog-present == 'true' }}
